# beer_recipe

./: .gitignore  .gitmodules  Cargo.toml
beerxml/: Cargo.toml
beerxml/src/: equipment.rs  fermentable.rs  hop.rs  lib.rs  mash.rs  misc.rs  recipe.rs  style.rs  water.rs  yeast.rs
bryggio_recipe/: Cargo.toml
bryggio_recipe/src/: lib.rs  utils.rs
bryggio_recipe/src/beerxml/: equipment.rs  mash.rs  misc.rs  recipe.rs  water.rs  yeast.rs
bryggio_recipe/src/beerxml_conv/: mod.rs
bryggio_recipe/src/bryggio/: mod.rs  recipe.rs
bryggio_recipe/src/bryggio/process/: boil.rs
bryggio_recipe/src/bryggio/state_machine/: mod.rs
bryggio_recipe/tests/: mod.rs
bryggio_recipe/tests/beerxml/: hops.rs  mod.rs  recipe.rs
bryggio_recipe/tests/beerxml/data/: recipe.xml
bryggio_recipe/tests/brewfather/: Brewfather_BeerXML_Goedar_20200215.xml  recipe.rs
src/: equipment.rs  fermentable.rs  hop.rs  lib.rs  mash.rs  mash_step.rs  misc.rs  recipe.rs  style.rs  units.rs  utils.rs  water.rs  yeast.rs
src/beerxml/: equipment.rs  fermentable.rs  hop.rs  mash.rs  misc.rs  mod.rs  recipe.rs  style.rs  yeast.rs
src/bryggio/: mod.rs  recipe.rs
src/bryggio/process/: boil.rs  carbonation.rs  fermentation.rs  mash.rs  mod.rs  preparation.rs
tests/: hops.rs  recipe.rs
tests/beerxml/: hops.rs  recipe.rs
tests/brewfather/: Brewfather_RECIPE_Goedar_20200215.json  recipe.rs
