[package]
name = "beer_recipe"
version = "0.1.0"
authors = ["Jakob <jakob.lindqvist@chalmers.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = ">=1.0", features = ["derive"] }
serde-xml-rs = "0.3.1"
serde_json = ">=1"
brew_calculator = {path = "../brew_calculator"}
